--- a/.flowconfig
+++ b/.flowconfig
@@ -1,5 +1,7 @@
 [ignore]
 .*/node_modules/.*
+!.*/node_modules/@types/.*
+!.*/node_modules/redux-form/.*
 .*/build/.*
 .*/coverage/.*
 [include]
@@ -25,4 +27,4 @@ suppress_type=$FlowFixMe
 [strict]
 
 [version]
-^0.93.0
+^0.148.0
