--- a/package.json
+++ b/package.json
@@ -5,41 +5,41 @@
   "proxy": "http://localhost:4000",
   "dependencies": {
     "antd": "^3.10.1",
-    "lodash": "^4.17.11",
-    "moment": "^2.22.2",
-    "node-sass-chokidar": "^1.3.4",
-    "normalizr": "^3.3.0",
-    "npm-run-all": "^4.1.3",
-    "react": "^16.13.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "node-sass-chokidar": "^1.5.0",
+    "normalizr": "^3.6.1",
+    "npm-run-all": "^4.1.5",
+    "react": "^17.0.2",
     "react-csv": "^2.0.3",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "react-test-renderer": "^16.5.2",
+    "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
     "redux": "^4.0.1",
     "redux-form": "^8.3.6",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "rxjs-compat": "^6.5.3",
-    "victory": "^35.0.3",
-    "whatwg-fetch": "^3.0.0"
+    "rxjs-compat": "^6.6.7",
+    "victory": "^35.5.1",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.3",
-    "flow-bin": "0.93.0",
-    "flow-typed": "^3.2.1",
-    "prettier-eslint": "^11.0.0",
-    "prettier-eslint-cli": "^5.0.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-plugin-flowtype": "^5.7.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "flow-bin": "^0.148.0",
+    "flow-typed": "^3.3.1",
+    "prettier-eslint": "^12.0.0",
+    "prettier-eslint-cli": "^5.0.1",
     "redux-mock-store": "^1.5.3"
   },
   "peerDependencies": {
