--- a/package.json
+++ b/package.json
@@ -4,21 +4,10 @@
   "private": true,
   "proxy": "http://localhost:4000",
   "dependencies": {
-    "@types/jest": "^26.0.23",
-    "@types/lodash": "^4.14.170",
-    "@types/node": "^15.6.0",
-    "@types/react": "^17.0.6",
-    "@types/react-csv": "^1.1.1",
-    "@types/react-dom": "^17.0.5",
-    "@types/react-helmet": "^6.1.1",
-    "@types/react-redux": "^7.1.16",
-    "@types/react-router-dom": "^5.1.7",
     "antd": "^3.10.1",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
-    "node-sass-chokidar": "^1.3.4",
     "normalizr": "^3.3.0",
-    "npm-run-all": "^4.1.3",
     "react": "^16.13.1",
     "react-csv": "^2.0.3",
     "react-dom": "^16.13.1",
@@ -32,46 +21,51 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "rxjs-compat": "^6.5.3",
-    "typescript": "^4.2.4",
     "victory": "^35.0.3",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.170",
+    "@types/node": "^15.6.0",
+    "@types/react": "^17.0.6",
+    "@types/react-csv": "^1.1.1",
+    "@types/react-dom": "^17.0.5",
+    "@types/react-helmet": "^6.1.1",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
     "@types/redux-form": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
+    "eslint": "^7.27.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "flow-bin": "0.93.0",
-    "flow-typed": "^3.2.1",
-    "prettier-eslint": "^11.0.0",
-    "prettier-eslint-cli": "^5.0.0",
-    "redux-mock-store": "^1.5.3"
+    "node-sass-chokidar": "^1.3.4",
+    "npm-run-all": "^4.1.3",
+    "prettier": "^2.3.0",
+    "redux-mock-store": "^1.5.3",
+    "typescript": "^4.2.4"
   },
   "peerDependencies": {
-    "jest": "23.6.x"
+    "jest": "26.6.x"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
-    "eslint": "eslint \"src/**/*.js\"",
-    "lint": "prettier-eslint \"$PWD/src/**/*.js\"",
-    "lint-fix": "prettier-eslint --write \"$PWD/src/**/*.js\"",
-    "flow": "flow",
-    "flow-typed": "flow-typed",
-    "flow-coverage": "flow coverage",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint-fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "build": "npm run build-css && react-scripts build",
     "test": "npm run test-ci",
-    "test-js": "npm run flow && react-scripts test",
+    "test-js": "react-scripts test",
     "test-watch": "npm-run-all -p watch-css test-js",
     "test-ci": "npm run build-css && CI=true npm run test-js",
     "test-coverage": "npm run test-js -- --coverage",
