--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/redux-form": "^8.3.1",
+    "@types/redux-logger": "^3.0.8",
+    "@types/redux-mock-store": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
     "enzyme": "^3.7.0",
@@ -61,8 +63,8 @@
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint-fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix",
     "build": "npm run build-css && react-scripts build",
     "test": "npm run test-ci",
     "test-js": "react-scripts test",
