--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,6 +45,13 @@
       }
     ],
     "react/jsx-props-no-spreading": "off", // Disable checking for spreading until we find an alternative
+    "react/jsx-filename-extension": [
+      // Allow JSX in .js and .ts as well
+      "error",
+      {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    ],
     "import/no-named-as-default": "off",
     "jsx-a11y/anchor-is-valid": [
       "error",
