--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.8",
     "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.170",
     "@types/node": "^15.6.0",
@@ -63,8 +64,8 @@
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
-    "lint": "eslint .",
-    "lint-fix": "eslint . --fix",
+    "lint": "eslint ./src",
+    "lint-fix": "eslint ./src --fix",
     "build": "npm run build-css && react-scripts build",
     "test": "npm run test-ci",
     "test-js": "react-scripts test",
