--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "proxy": "http://localhost:4000",
   "dependencies": {
-    "antd": "^3.10.1",
+    "@ant-design/icons": "^4.6.2",
+    "@ant-design/compatible": "^1.0.0",
+    "antd": "^4.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "node-sass-chokidar": "^1.5.0",
