--- a/.flowconfig
+++ b/.flowconfig
@@ -2,6 +2,11 @@
 .*/node_modules/.*
 .*/build/.*
 !.*/node_modules/redux-form/.*
+!.*/node_modules/antd/.*
+!.*/node_modules/@ant-design/.*
+.*/node_modules/antd/lib/index.js
+.*/node_modules/@ant-design/icons/lib/index.js
+.*/node_modules/@ant-design/compatible/lib/index.js
 .*/node_modules/redux-form/lib/FormName.js
 .*/node_modules/redux-form/lib/FormSection.js
 .*/node_modules/redux-form/lib/createReduxForm.js
