--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
-# dependencies
+# Package management
 /node_modules
+yarn-error.log
 
 # testing
 /coverage
@@ -18,6 +19,7 @@ src/**/*.css
 .env.development.local
 .env.test.local
 .env.production.local
+
 # flow-types
 /flow-typed
 npm-debug.log*
