--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src src/ -o src/ --watch --recursive",
+    "watch-css": "yarn run build-css && node-sass-chokidar --include-path ./src src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "eslint": "eslint \"src/**/*.js\"",
@@ -58,12 +58,12 @@
     "flow": "flow",
     "flow-typed": "flow-typed",
     "flow-coverage": "flow coverage",
-    "build": "npm run build-css && react-scripts build",
-    "test": "npm run test-ci",
-    "test-js": "npm run flow && react-scripts test",
+    "build": "yarn run build-css && react-scripts build",
+    "test": "yarn run test-ci",
+    "test-js": "yarn run flow && react-scripts test",
     "test-watch": "npm-run-all -p watch-css test-js",
-    "test-ci": "npm run build-css && CI=true npm run test-js",
-    "test-coverage": "npm run test-js -- --coverage",
+    "test-ci": "yarn run build-css && yarn run test-js --watchAll=false",
+    "test-coverage": "yarn run test-js --coverage",
     "eject": "react-scripts eject",
     "postinstall": "npx flow-typed install && npx flow-typed create-stub whatwg-fetch && npx flow-typed create-stub antd && npx flow-typed create-stub redux-form"
   },
