--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,16 @@ jobs:
         cache: 'yarn'
     - run: yarn install
     - run: yarn build
+    
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup Node.js 12
+      uses: actions/setup-node@v2
+      with:
+        node-version: '12'
+        cache: 'yarn'
+    - run: yarn install
     - run: yarn test
